# rdrobust

./: README.md  benchmark.py
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: ToBuild.txt  rdplot_illustration.py  rdrobust-1.0.1-py3-none-any.whl  rdrobust_illustration.py  rdrobust_senate.csv
Python/rdrobust/: Changes_Ago22_Python.docx  LICENSE.md  README.md  ToBuild.txt  pyproject.toml  setup.cfg
Python/rdrobust/src/: rdrobust_mainchanges_Jun22.docx
Python/rdrobust/src/rdrobust/: __init__.py  _numba_core.py  datasets.py  funs.py  rdbwselect.py  rdplot.py  rdplot_rdrobust.py  rdrobust.py
Python/rdrobust/src/rdrobust.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/rdrobust/src/rdrobust/data/: __init__.py  rdrobust_RDsenate.csv
Python/rdrobust/test/: RDSenate.csv  RDSenate_aug.csv  test_minimal.py  test_suite.py
Python/rdrobust/tests/: test_numerical_contracts.py
R/: commands.txt  rdplot_illustration.R  rdrobust_illustration.r
R/rdrobust/: .Rbuildignore  DESCRIPTION  NAMESPACE  rdrobust-Ex.R
R/rdrobust/R/: functions.R  rdbwselect.R  rdbwselect_2014.R  rdplot.R  rdrobust.R  rdrobust_plot.R
R/rdrobust/data/: rdrobust_RDsenate.rda
R/rdrobust/man/: plot.rdrobust.Rd  rdbwselect.Rd  rdbwselect_2014.Rd  rdplot.Rd  rdrobust-package.Rd  rdrobust.Rd  rdrobust_RDsenate.Rd
stata/: rdbwselect.ado  rdbwselect.sthlp  rdbwselect_2014.ado  rdbwselect_2014.sthlp  rdbwselect_2014_cvplot.mo  rdbwselect_2014_functions.do  rdbwselect_2014_kconst.ado  rdbwselect_2014_kweight.mo  rdbwselect_2014_rdvce.mo  rdbwselect_2014_regconst.mo  rdplot.ado  rdplot.sthlp  rdplot_illustration.do  rdrobust.ado  rdrobust.pkg  rdrobust.sthlp  rdrobust_bw.mo  rdrobust_collapse.mo  rdrobust_functions.do  rdrobust_groupid.mo  rdrobust_illustration.do  rdrobust_illustration_new.do  rdrobust_kweight.mo  rdrobust_median.mo  rdrobust_res.mo  rdrobust_senate.dta  rdrobust_vce.mo  rdrobust_vce_qq_cluster.mo  rdrobustplot.ado  rdrobustplot.sthlp  stata.toc
