[metadata]
name = rdrobust
version = 1.2.1
author = Ricardo Masini
author_email = rmasini@princeton.edu
description =  Implements local polynomial Regression Discontinuity (RD) point estimators with robust bias-corrected confidence intervals and inference procedures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rdrobust
project_urls = 
    Bug Tracker = https://github.com/rdpackages/rdrobust/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas>=2.0.0
    scipy
    scikit-learn>=1.2.0
    plotnine

[options.packages.find]
where = src