[metadata]
name = rdrobust
version = 2.0.0
author = Sebastian Calonico, Matias D. Cattaneo, Max H. Farrell, Ricardo Masini, Rocio Titiunik
author_email = scalonico@ucdavis.edu, matias.d.cattaneo@gmail.com, mhfarrell@gmail.com, ricardo.masini@gmail.com, rocio.titiunik@gmail.com
maintainer = Sebastian Calonico
maintainer_email = scalonico@ucdavis.edu
license = GPL-3.0-only
license_files = LICENSE.md
description = Implements local polynomial Regression Discontinuity (RD) point estimators with robust bias-corrected confidence intervals and inference procedures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rdrobust
project_urls =
	Bug Tracker = https://github.com/rdpackages/rdrobust/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
	numpy
	pandas>=2.0.0
	scipy
	plotnine>=0.13.6
	matplotlib>=3.9.2

[options.extras_require]
formula = formulaic>=1.0
speed = numba>=0.59

[options.packages.find]
where = src

[options.package_data]
rdrobust = data/*.csv

[egg_info]
tag_build = 
tag_date = 0

